--- a/GoGreenV3/Views/Home/Index.cshtml
+++ b/GoGreenV3/Views/Home/Index.cshtml
@@ -1,31 +1,44 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Home";
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>GO GREEN</h1>
+    <p class="lead">Emergency Traffic Monitoring System</p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <img src="~/Images/Home/Hospital.png" class="img-responsive" />
+        <h2>Hospital</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris a consectetur enim. Proin ultricies varius nisl vel eleifend.
+            Nunc molestie nisl vitae vulputate vestibulum. Sed eu hendrerit turpis. Sed porttitor lorem nec ligula gravida, sed vulputate
+            nunc posuere. Pellentesque pellentesque efficitur augue, non suscipit massa aliquam id. Suspendisse risus magna, ullamcorper et
+            orci eget, dapibus gravida eros. Nunc elementum malesuada nulla ac luctus.
         </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="@Url.Action("Hospital", "Agency")">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <img src="~/Images/Home/Police.png" class="img-responsive" />
+        <h2>Police Department</h2>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris a consectetur enim. Proin ultricies varius nisl vel eleifend.
+            Nunc molestie nisl vitae vulputate vestibulum. Sed eu hendrerit turpis. Sed porttitor lorem nec ligula gravida, sed vulputate
+            nunc posuere. Pellentesque pellentesque efficitur augue, non suscipit massa aliquam id. Suspendisse risus magna, ullamcorper et
+            orci eget, dapibus gravida eros. Nunc elementum malesuada nulla ac luctus.
+        </p>
+        <p><a class="btn btn-default" href="@Url.Action("PoliceDepartment", "Agency")">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <img src="~/Images/Home/Fire.png" class="img-responsive" />
+        <h2>Fire Department</h2>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris a consectetur enim. Proin ultricies varius nisl vel eleifend.
+            Nunc molestie nisl vitae vulputate vestibulum. Sed eu hendrerit turpis. Sed porttitor lorem nec ligula gravida, sed vulputate
+            nunc posuere. Pellentesque pellentesque efficitur augue, non suscipit massa aliquam id. Suspendisse risus magna, ullamcorper et
+            orci eget, dapibus gravida eros. Nunc elementum malesuada nulla ac luctus.
+        </p>
+        <p><a class="btn btn-default" href="@Url.Action("FireDepartment", "Agency")">Learn more &raquo;</a></p>
     </div>
 </div>
