Minor UI changes

--- a/GoGreenV3/Views/Manage/Index.cshtml
+++ b/GoGreenV3/Views/Manage/Index.cshtml
@@ -1,14 +1,14 @@
 ﻿@model GoGreenV3.Models.IndexViewModel
 @{
-    ViewBag.Title = "Manage";
+    ViewBag.Title = "Profile";
 }
 
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
+<hr />
 
 <p class="text-success">@ViewBag.StatusMessage</p>
 <div>
-    <h4>Change your account settings</h4>
-    <hr />
+    <h4>Change your account settings here</h4>
     <dl class="dl-horizontal">
         <dt>Profile:</dt>
         <dd>
