--- a/GoGreenV3/Views/Account/Register.cshtml
+++ b/GoGreenV3/Views/Account/Register.cshtml
@@ -17,6 +17,7 @@
             @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
         </div>
     </div>
+
     <div class="form-group">
         @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
@@ -24,6 +25,7 @@
             @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
         </div>
     </div>
+
     <div class="form-group">
         @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
@@ -31,6 +33,7 @@
             @Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "text-danger" })
         </div>
     </div>
+
     <div class="form-group">
         @Html.LabelFor(m => m.FirstName, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
@@ -38,6 +41,7 @@
             @Html.ValidationMessageFor(m => m.FirstName, "", new { @class = "text-danger" })
         </div>
     </div>
+
     <div class="form-group">
         @Html.LabelFor(m => m.LastName, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
@@ -45,27 +49,31 @@
             @Html.ValidationMessageFor(m => m.LastName, "", new { @class = "text-danger" })
         </div>
     </div>
+
     <div class="form-group">
-        @Html.LabelFor(m => m.BirthDate, new { @class = "col-md-2 control-label" })
+        @Html.LabelFor(model => model.CellphoneNumber, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.TextBoxFor(m => m.BirthDate, new { @class = "form-control", placeholder = "OPTIONAL (Format: MM-DD-YYYY)" })
-            @Html.ValidationMessageFor(m => m.BirthDate, "", new { @class = "text-danger" })
+            @Html.EditorFor(model => model.CellphoneNumber, new { htmlAttributes = new { @class = "form-control", @Value = ViewBag.CellphoneNumber, placeholder = "OPTIONAL (E.g. 09253334444)" } })
+            @Html.ValidationMessageFor(model => model.CellphoneNumber, "", new { @class = "text-danger" })
         </div>
     </div>
+
     <div class="form-group">
-        @Html.LabelFor(m => m.CellphoneNumber, new { @class = "col-md-2 control-label" })
+        @Html.LabelFor(model => model.TelephoneNumber, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.TextBoxFor(m => m.CellphoneNumber, new { @class = "form-control", placeholder = "OPTIONAL (E.g. 09253334444)" })
-            @Html.ValidationMessageFor(m => m.CellphoneNumber, "", new { @class = "text-danger" })
+            @Html.EditorFor(model => model.TelephoneNumber, new { htmlAttributes = new { @class = "form-control", @Value = ViewBag.TelephoneNumber, placeholder = "OPTIONAL (E.g. 5557777)" } })
+            @Html.ValidationMessageFor(model => model.TelephoneNumber, "", new { @class = "text-danger" })
         </div>
     </div>
+
     <div class="form-group">
-        @Html.LabelFor(m => m.TelephoneNumber, new { @class = "col-md-2 control-label" })
+        @Html.LabelFor(model => model.BirthDate, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.TextBoxFor(m => m.TelephoneNumber, new { @class = "form-control", placeholder = "OPTIONAL (E.g. 5557777)" })
-            @Html.ValidationMessageFor(m => m.TelephoneNumber, "", new { @class = "text-danger" })
+            @Html.TextBoxFor(m => m.BirthDate, new { @class = "form-control", @Value = ViewBag.BirthDate, placeholder = "OPTIONAL (Format: MM-DD-YYYY)", data_provide = "datepicker", data_date_start_view = 2, data_date_clear_btn = true, data_date_autoclose = false })
+            @Html.ValidationMessageFor(model => model.BirthDate, "", new { @class = "text-danger" })
         </div>
     </div>
+
     <div class="form-group">
         @Html.LabelFor(m => m.Type, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
@@ -73,6 +81,7 @@
             @Html.ValidationMessageFor(m => m.Type, "", new { @class = "text-danger" })
         </div>
     </div>
+
     <div class="form-group">
         @Html.LabelFor(m => m.Agency, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
@@ -80,6 +89,7 @@
             @Html.ValidationMessageFor(m => m.Agency, "", new { @class = "text-danger" })
         </div>
     </div>
+
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Register" />
