--- a/GoGreenV3/Views/Home/About.cshtml
+++ b/GoGreenV3/Views/Home/About.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h2>@ViewBag.Title GO GREEN</h2>
+<hr />
 
-<p>Use this area to provide additional information.</p>
+<p>Useless information right now</p>
