--- a/GoGreenV3/Views/Manage/Index.cshtml
+++ b/GoGreenV3/Views/Manage/Index.cshtml
@@ -3,10 +3,26 @@
     ViewBag.Title = "Profile";
 }
 
+@{
+    if(!String.IsNullOrEmpty(ViewBag.StatusMessage) && Request.Url.Query.ToLower().Contains("success"))
+    {
+        <div id = "messageAlert" class="alert alert-success alert-dismissable" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            @ViewBag.StatusMessage
+        </div>
+    }
+    else if (!String.IsNullOrEmpty(ViewBag.StatusMessage) && Request.Url.Query.ToLower().Contains("error"))
+    {
+        <div id="messageAlert" class="alert alert-danger alert-dismissable" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            @ViewBag.StatusMessage
+        </div>
+    }
+}
+
 <h2>@ViewBag.Title</h2>
 <hr />
 
-<p class="text-success">@ViewBag.StatusMessage</p>
 <div>
     <h4>Change your account settings here</h4>
     <dl class="dl-horizontal">
