--- a/GoGreenV3/Views/Shared/_LoginPartial.cshtml
+++ b/GoGreenV3/Views/Shared/_LoginPartial.cshtml
@@ -11,11 +11,10 @@
         var userStore = new UserStore<ApplicationUser>(new ApplicationDbContext());
         var manager = new UserManager<ApplicationUser>(userStore);
         var currentUser = manager.FindById(User.Identity.GetUserId());
-        var user = currentUser.FirstName + " " + currentUser.LastName;
 
         <ul class="nav navbar-nav navbar-right">
             <li>
-                <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">@user <span class="caret"></span></a>
+                <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">@currentUser.GetFullName <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                     <li class="dropdown-header">Accounts:</li>
                     <li>
