--- a/GoGreenV3/Views/Marker/Create.cshtml
+++ b/GoGreenV3/Views/Marker/Create.cshtml
@@ -86,13 +86,29 @@
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
+                <button type="button" class="btn btn-default" data-toggle="modal" , data-target="#cancelButton">Cancel</button>
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
+@* CancelButton Modal *@
+<div class="modal fade" id="cancelButton" tabindex="-1" role="dialog" aria-labelledby="cancelLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="cancelHeader"><span class="glyphicon glyphicon-question-sign"></span> Cancel</h4>
+            </div>
+            <div class="modal-body">
+                Do you want to cancel adding of marker?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">No</button>
+                @Html.ActionLink("Yes", "Index", "Marker", null, new { @class = "btn btn-default" })
+            </div>
+        </div>
+    </div>
 </div>
 
 @section Scripts {
