--- a/GoGreenV3/Views/Marker/Index.cshtml
+++ b/GoGreenV3/Views/Marker/Index.cshtml
@@ -65,11 +65,36 @@
             @Html.DisplayFor(modelItem => item.IsWorking)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            <a href="@Url.Action("Edit", "Marker", new { id=item.Id })" class="btn btn-primary btn-sm">
+                <span class="glyphicon glyphicon-pencil"></span>
+            </a>
+            <a href="@Url.Action("Details", "Marker", new { id=item.Id })" class="btn btn-primary btn-sm">
+                <span class="glyphicon glyphicon-info-sign"></span>
+            </a>
+            <a href="@Url.Action("Delete", "Marker", new { id=item.Id })" class="btn btn-danger btn-sm">
+                <span class="glyphicon glyphicon-remove"></span>
+            </a>
         </td>
     </tr>
 }
 
 </table>
+
+@* CancelButton Modal *@
+<div class="modal fade" id="cancelButton" tabindex="-1" role="dialog" aria-labelledby="cancelLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="cancelHeader"><span class="glyphicon glyphicon-question-sign"></span> Cancel</h4>
+            </div>
+            <div class="modal-body">
+                Do you want to cancel adding of marker?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">No</button>
+                @Html.ActionLink("Yes", "Index", "Home", null, new { @class = "btn btn-default" })
+            </div>
+        </div>
+    </div>
+</div>
