--- a/GoGreenV3/Views/Manage/Index.cshtml
+++ b/GoGreenV3/Views/Manage/Index.cshtml
@@ -1,4 +1,7 @@
-﻿@model GoGreenV3.Models.IndexViewModel
+﻿@using Microsoft.AspNet.Identity
+@using Microsoft.AspNet.Identity.EntityFramework
+@using GoGreenV3.Models
+@model GoGreenV3.Models.IndexViewModel
 @{
     ViewBag.Title = "Profile";
 }
@@ -18,85 +21,104 @@
             @ViewBag.StatusMessage
         </div>
     }
+
+    var userStore = new UserStore<ApplicationUser>(new ApplicationDbContext());
+    var manager = new UserManager<ApplicationUser>(userStore);
+    var currentUser = manager.FindById(User.Identity.GetUserId());
 }
 
-<h2>@ViewBag.Title</h2>
-<hr />
+<div class="row">
+    <div class="col-md-3 img-rounded" style="background-color: rgb(239, 234, 234); padding: 0">
+        <img class="img-thumbnail" src="~/Images/Home/Police.png" style="width: 160px; height: 160px; margin-top: 12px; margin-left: 12px" />
 
-<div>
-    <h4>Change your account settings here</h4>
-    <dl class="dl-horizontal">
-        <dt>Profile:</dt>
-        <dd>
-            @Html.ActionLink("Edit your profile", "EditProfile", "Account")
-        </dd>
-        <dt>Password:</dt>
-        <dd>
-            @if (Model.HasPassword)
-            {
-                @Html.ActionLink("Change your password", "ChangePassword")
-            }
-            else
-            {
-                @Html.ActionLink("Create", "SetPassword")
-            }
-        </dd>
-        @*<dt>External Logins:</dt>
-        <dd>
-            @Model.Logins.Count [
-            @Html.ActionLink("Manage", "ManageLogins") ]
-        </dd>*@
-        @*
-            Phone Numbers can used as a second factor of verification in a two-factor authentication system.
-             
-             See <a href="http://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
-                for details on setting up this ASP.NET application to support two-factor authentication using SMS.
-             
-             Uncomment the following block after you have set up two-factor authentication
-        *@
-        @*  
-            <dt>Phone Number:</dt>
+        <div style="margin: 12px;">
+            <strong class="text-primary" style="font-size: 20px">@currentUser.GetFullName</strong> <br /><br />
+            Member since: @currentUser.MemberSince.ToString("MMMM' 'd', 'yyyy' 'h:mm:ss tt") <br />
+            Last active: @currentUser.LastActive.ToString("MMMM' 'd', 'yyyy' 'h:mm:ss tt") <br />
+        </div>
+
+        <div style="margin: 12px 0;">
+            <a href="@Url.Action("EditProfile", "Account")" id="profileButtons">Edit Profile</a>
+            <a href="@Url.Action("ChangePassword", "Manage")" id="profileButtons">Changed Password</a>
+            <a href="javascript:document.getElementById('logoutForm').submit()" id="profileButtons" style="border-bottom: 1px solid;">Log Off</a>
+        </div>
+    </div>
+
+    <div class="col-md-9">
+        <h4>Change your account settings here</h4>
+        <dl class="dl-horizontal">
+            <dt>Profile:</dt>
             <dd>
-                @(Model.PhoneNumber ?? "None") [
-                @if (Model.PhoneNumber != null)
-                {
-                    @Html.ActionLink("Change", "AddPhoneNumber")
-                    @: &nbsp;|&nbsp;
-                    @Html.ActionLink("Remove", "RemovePhoneNumber")
+                @Html.ActionLink("Edit your profile", "EditProfile", "Account")
+            </dd>
+            <dt>Password:</dt>
+            <dd>
+                @if (Model.HasPassword)
+            {
+                    @Html.ActionLink("Change your password", "ChangePassword")
                 }
                 else
                 {
-                    @Html.ActionLink("Add", "AddPhoneNumber")
+                    @Html.ActionLink("Create", "SetPassword")
                 }
-                ]
             </dd>
-        *@
-        @*<dt>Two-Factor Authentication:</dt>
-        <dd>
-            <p>
-                There are no two-factor authentication providers configured. See <a href="http://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
-                for details on setting up this ASP.NET application to support two-factor authentication.
-            </p>
-            @if (Model.TwoFactor)
-            {
-                using (Html.BeginForm("DisableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                {
-                    @Html.AntiForgeryToken()
-                    <text>Enabled
-                    <input type="submit" value="Disable" class="btn btn-link" />
-                    </text>
-                }
-            }
-            else
-            {
-                using (Html.BeginForm("EnableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                {
-                    @Html.AntiForgeryToken()
-                    <text>Disabled
-                    <input type="submit" value="Enable" class="btn btn-link" />
-                    </text>
-                }
-            }
-        </dd>*@
-    </dl>
+            @*<dt>External Logins:</dt>
+                <dd>
+                    @Model.Logins.Count [
+                    @Html.ActionLink("Manage", "ManageLogins") ]
+                </dd>*@
+            @*
+                Phone Numbers can used as a second factor of verification in a two-factor authentication system.
+
+                 See <a href="http://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
+                    for details on setting up this ASP.NET application to support two-factor authentication using SMS.
+
+                 Uncomment the following block after you have set up two-factor authentication
+            *@
+            @*
+                <dt>Phone Number:</dt>
+                <dd>
+                    @(Model.PhoneNumber ?? "None") [
+                    @if (Model.PhoneNumber != null)
+                    {
+                        @Html.ActionLink("Change", "AddPhoneNumber")
+                        @: &nbsp;|&nbsp;
+                        @Html.ActionLink("Remove", "RemovePhoneNumber")
+                    }
+                    else
+                    {
+                        @Html.ActionLink("Add", "AddPhoneNumber")
+                    }
+                    ]
+                </dd>
+            *@
+            @*<dt>Two-Factor Authentication:</dt>
+                <dd>
+                    <p>
+                        There are no two-factor authentication providers configured. See <a href="http://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
+                        for details on setting up this ASP.NET application to support two-factor authentication.
+                    </p>
+                    @if (Model.TwoFactor)
+                    {
+                        using (Html.BeginForm("DisableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                        {
+                            @Html.AntiForgeryToken()
+                            <text>Enabled
+                            <input type="submit" value="Disable" class="btn btn-link" />
+                            </text>
+                        }
+                    }
+                    else
+                    {
+                        using (Html.BeginForm("EnableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                        {
+                            @Html.AntiForgeryToken()
+                            <text>Disabled
+                            <input type="submit" value="Enable" class="btn btn-link" />
+                            </text>
+                        }
+                    }
+                </dd>*@
+        </dl>
+    </div>
 </div>
