--- a/GoGreenV3/Views/Manage/Index.cshtml
+++ b/GoGreenV3/Views/Manage/Index.cshtml
@@ -49,8 +49,32 @@
         </div>
     </div>
 
-    <div class="col-md-9 img-rounded" padding: 0; height: 600px;">
-
+    <div id="profileBody" class="col-md-9">
+        <div id="profileBodyHeader">
+            @currentUser.GetFullName's Profile
+        </div>
+        <div id="profileSubBody" class="img-rounded">
+            <h4>Personal Info</h4>
+            <dl class="dl-horizontal">
+                <dt>Name:</dt>
+                <dd>@currentUser.GetFullName</dd>
+                <dt>Email:</dt>
+                <dd>@currentUser.Email</dd>
+                <dt>Cellphone #:</dt>
+                <dd>@currentUser.CellphoneNumber</dd>
+                <dt>Telphone #:</dt>
+                <dd>@currentUser.TelephoneNumber</dd>
+            </dl>
+        </div>
+        <div id="profileSubBody" class="img-rounded">
+            <h4>Working at</h4>
+            <dl class="dl-horizontal">
+                <dt>Agency:</dt>
+                <dd>@currentUser.Agency</dd>
+                <dt>Address:</dt>
+                <dd>General Luna Road, Baguio City</dd>
+            </dl>
+        </div>
     </div>
 
     @*<div class="col-md-9">
