--- a/GoGreenV3/Views/Shared/_Layout.cshtml
+++ b/GoGreenV3/Views/Shared/_Layout.cshtml
@@ -34,6 +34,16 @@
                             </ul>
                         </li>
                     }
+                    @if (User.IsInRole("Developer") || User.IsInRole("Superuser") || User.IsInRole("Admin") || User.IsInRole("Moderator") || User.IsInRole("Rescuer"))
+                    {
+                        <li>
+                            <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Agency <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li>@Html.ActionLink("Agency List", "Index", "Agency")</li>
+                                <li>@Html.ActionLink("Add Agency", "Create", "Agency")</li>
+                            </ul>
+                        </li>
+                    }
                     <li>
                         <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Help <span class="caret"></span></a>
                         <ul class="dropdown-menu">
