--- a/GoGreenV3/Views/Home/Index.cshtml
+++ b/GoGreenV3/Views/Home/Index.cshtml
@@ -32,7 +32,7 @@
     </div>
     <div class="col-md-4">
         <img src="~/Images/Home/Fire.png" class="img-responsive" />
-        <h2>Fire Department</h2>
+        <h2>Fire Station</h2>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris a consectetur enim. Proin ultricies varius nisl vel eleifend.
             Nunc molestie nisl vitae vulputate vestibulum. Sed eu hendrerit turpis. Sed porttitor lorem nec ligula gravida, sed vulputate
