--- a/GoGreenV3/Views/Agency/Create.cshtml
+++ b/GoGreenV3/Views/Agency/Create.cshtml
@@ -14,11 +14,10 @@
     <div class="form-horizontal">
         <h4>Agency</h4>
         <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.Type, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Type, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.Type, Model.Types, "--- SELECT AGENCY TYPE ---", new { @class = "form-control", onchange = "listAgencies()" })
                 @Html.ValidationMessageFor(model => model.Type, "", new { @class = "text-danger" })
             </div>
         </div>
