Minor UI Changes

--- a/GoGreenV3/Views/Manage/Index.cshtml
+++ b/GoGreenV3/Views/Manage/Index.cshtml
@@ -77,7 +77,7 @@
                 <dt>Agency:</dt>
                 <dd>@currentUser.Agency</dd>
                 <dt>Address:</dt>
-                <dd>General Luna Road, Baguio City</dd>
+                <dd>@ViewBag.AgencyAddress</dd>
             </dl>
         </div>
     </div>
