--- a/GoGreenV3/Views/Agency/Edit.cshtml
+++ b/GoGreenV3/Views/Agency/Edit.cshtml
@@ -68,7 +68,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.WebsiteUrl, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.WebsiteUrl, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.WebsiteUrl, new { htmlAttributes = new { @class = "form-control", placeholder = "http://" } })
                 @Html.ValidationMessageFor(model => model.WebsiteUrl, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -92,13 +92,29 @@
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Save" class="btn btn-default" />
+                <button type="button" class="btn btn-default" data-toggle="modal" , data-target="#cancelButton">Cancel</button>
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
+@* CancelButton Modal *@
+<div class="modal fade" id="cancelButton" tabindex="-1" role="dialog" aria-labelledby="cancelLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="cancelHeader"><span class="glyphicon glyphicon-question-sign"></span> Cancel</h4>
+            </div>
+            <div class="modal-body">
+                Do you want to cancel adding of agency?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">No</button>
+                @Html.ActionLink("Yes", "Index", "Agency", null, new { @class = "btn btn-default" })
+            </div>
+        </div>
+    </div>
 </div>
 
 @section Scripts {
