--- a/GoGreenV3/Views/Agency/Index.cshtml
+++ b/GoGreenV3/Views/Agency/Index.cshtml
@@ -47,7 +47,14 @@
             @Html.DisplayFor(modelItem => item.Type)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Name)
+            @if (!item.WebsiteUrl.IsEmpty())
+            {
+                <a href="@item.WebsiteUrl">@item.Name</a>
+            }
+            else
+            {
+                @Html.DisplayFor(modelItem => item.Name)
+            }
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Address)
@@ -71,9 +78,15 @@
             @Html.DisplayFor(modelItem => item.Email)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            <a href="@Url.Action("Edit", "Agency", new { id=item.Id })" class="btn btn-primary btn-sm">
+                <span class="glyphicon glyphicon-pencil"></span>
+            </a>
+            <a href="@Url.Action("Details", "Agency", new { id=item.Id })" class="btn btn-primary btn-sm">
+                <span class="glyphicon glyphicon-info-sign"></span>
+            </a>
+            <a href="@Url.Action("Delete", "Agency", new { id=item.Id })" class="btn btn-danger btn-sm">
+                <span class="glyphicon glyphicon-remove"></span>
+            </a>
         </td>
     </tr>
 }
