--- a/GoGreenV3/Views/Agency/Index.cshtml
+++ b/GoGreenV3/Views/Agency/Index.cshtml
@@ -20,24 +20,6 @@
         <th>
             @Html.DisplayNameFor(model => model.Address)
         </th>
-        @*<th>
-            @Html.DisplayNameFor(model => model.Latitude)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Longitude)
-        </th>*@
-        <th>
-            @Html.DisplayNameFor(model => model.Description)
-        </th>
-        @*<th>
-            @Html.DisplayNameFor(model => model.WebsiteUrl)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Contact)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Email)
-        </th>*@
         <th></th>
     </tr>
 
@@ -59,25 +41,7 @@
         <td>
             @Html.DisplayFor(modelItem => item.Address)
         </td>
-        @*<td>
-            @Html.DisplayFor(modelItem => item.Latitude)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Longitude)
-        </td>*@
-        <td>
-            @Html.DisplayFor(modelItem => item.Description)
-        </td>
-        @*<td>
-            @Html.DisplayFor(modelItem => item.WebsiteUrl)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Contact)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
-        </td>*@
-        <td>
+        <td class="text-nowrap">
             <a href="@Url.Action("Edit", "Agency", new { id=item.Id })" class="btn btn-primary btn-sm">
                 <span class="glyphicon glyphicon-pencil"></span>
             </a>
