--- a/GoGreenV3/Views/Marker/Index.cshtml
+++ b/GoGreenV3/Views/Marker/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<GoGreenV3.Models.MarkerModel>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Marker";
 }
 
-<h2>Index</h2>
+<h2>Traffic Light</h2>
 
 <div class="row">
     <div class="col-md-3 img-rounded" style="background-color: rgb(239, 234, 234); padding: 12px;">
