Minor UI changes

--- a/GoGreenV3/Views/Marker/Details.cshtml
+++ b/GoGreenV3/Views/Marker/Details.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Traffic Light</h2>
 
 <div>
-    <h4>MarkerModel</h4>
+    <h4>@Model.Type - @Model.Location</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
