--- a/GoGreenV3/Views/Marker/Delete.cshtml
+++ b/GoGreenV3/Views/Marker/Delete.cshtml
@@ -4,11 +4,10 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
-
+<h2>Traffic Light</h2>
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>MarkerModel</h4>
+    <h4>@Model.Type - @Model.Location</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -82,26 +81,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" />
-            <button type="button" class="btn btn-default" data-toggle="modal" , data-target="#cancelButton">Cancel</button>
+            @Html.ActionLink("Cancel", "Index", "Marker", null, new { @class = "btn btn-default" })
         </div>
     }
-</div>
-
-@* CancelButton Modal *@
-<div class="modal fade" id="cancelButton" tabindex="-1" role="dialog" aria-labelledby="cancelLabel">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="cancelHeader"><span class="glyphicon glyphicon-question-sign"></span> Cancel</h4>
-            </div>
-            <div class="modal-body">
-                Do you want to cancel deleting of marker?
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">No</button>
-                @Html.ActionLink("Yes", "Index", "Marker", null, new { @class = "btn btn-default" })
-            </div>
-        </div>
-    </div>
 </div>
