--- a/GoGreenV3/Views/Marker/Edit.cshtml
+++ b/GoGreenV3/Views/Marker/Edit.cshtml
@@ -4,14 +4,14 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>Traffic Light</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>MarkerModel</h4>
+        <h4>@Model.Type - @Model.Location</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
