--- a/GoGreenV3/Views/Marker/Index.cshtml
+++ b/GoGreenV3/Views/Marker/Index.cshtml
@@ -5,6 +5,8 @@
 }
 
 <h2>Traffic Light</h2>
+<h4>All Traffic Light</h4>
+<hr />
 
 <div class="row">
     <div class="col-md-3 img-rounded" style="background-color: rgb(239, 234, 234); padding: 12px;">
@@ -72,13 +74,13 @@
                     </td>
                     <td>
                         <a href="@Url.Action("Edit", "Marker", new { id=item.Id })" class="btn btn-primary btn-sm">
-                            <span class="glyphicon glyphicon-pencil"></span>
+                            <span class="glyphicon glyphicon-pencil"></span> Edit
                         </a>
                         <a href="@Url.Action("Details", "Marker", new { id=item.Id })" class="btn btn-primary btn-sm">
-                            <span class="glyphicon glyphicon-info-sign"></span>
+                            <span class="glyphicon glyphicon-info-sign"></span> Info
                         </a>
                         <a href="@Url.Action("Delete", "Marker", new { id=item.Id })" class="btn btn-danger btn-sm">
-                            <span class="glyphicon glyphicon-remove"></span>
+                            <span class="glyphicon glyphicon-remove"></span> Delete
                         </a>
                     </td>
                 </tr>
