--- a/GoGreenV3/Views/Marker/Details.cshtml
+++ b/GoGreenV3/Views/Marker/Details.cshtml
@@ -7,7 +7,7 @@
 <h2>Traffic Light</h2>
 
 <div>
-    <h4>@Model.Type - @Model.Location</h4>
+    <h4>@Model.Type <small>@Model.Location</small></h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
