--- a/GoGreenV3/Views/Marker/Edit.cshtml
+++ b/GoGreenV3/Views/Marker/Edit.cshtml
@@ -11,7 +11,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>@Model.Type - @Model.Location</h4>
+        <h4>@Model.Type <small>@Model.Location</small></h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
