--- a/GoGreenV3/Views/Marker/Index.cshtml
+++ b/GoGreenV3/Views/Marker/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h2>Traffic Light</h2>
-<h4>All Traffic Light</h4>
+<h4>Baguio City</h4>
 <hr />
 
 <div class="row">
@@ -72,7 +72,7 @@
                     <td>
                         @Html.DisplayFor(modelItem => item.Location)
                     </td>
-                    <td>
+                    <td class="text-nowrap">
                         <a href="@Url.Action("Edit", "Marker", new { id=item.Id })" class="btn btn-primary btn-sm">
                             <span class="glyphicon glyphicon-pencil"></span> Edit
                         </a>
