--- a/GoGreenV3/Views/Marker/Create.cshtml
+++ b/GoGreenV3/Views/Marker/Create.cshtml
@@ -94,7 +94,7 @@
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
                         <input type="submit" value="Create" class="btn btn-default" />
-                        <button type="button" class="btn btn-default" data-toggle="modal" , data-target="#cancelButton">Cancel</button>
+                        <button type="button" class="btn btn-default" data-toggle="modal" data-target="#cancelButton">Cancel</button>
                     </div>
                 </div>
             </div>
@@ -125,4 +125,4 @@
     @Scripts.Render("~/bundles/jqueryval")
 }
 <script src="~/Scripts/gmaps-place-locator.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyBnRjrz-o64fdMh2-qS6xK1WeKIMwcM76I&libraries=places&callback=initMap" async defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyBnRjrz-o64fdMh2-qS6xK1WeKIMwcM76I&libraries=places&callback=initMapCreatePage" async defer></script>
