--- a/GoGreenV3/Views/Account/Register.cshtml
+++ b/GoGreenV3/Views/Account/Register.cshtml
@@ -93,7 +93,7 @@
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Register" />
-            <button type="button" class="btn btn-default" data-toggle="modal" , data-target="#cancelButton">Cancel</button>
+            <button type="button" class="btn btn-default" data-toggle="modal" data-target="#cancelButton">Cancel</button>
         </div>
     </div>
 }
