--- a/GoGreenV3/Views/Account/ResendConfirmationEmail.cshtml
+++ b/GoGreenV3/Views/Account/ResendConfirmationEmail.cshtml
@@ -20,7 +20,7 @@
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="ResendConfirmationEmail" />
-            <button type="button" class="btn btn-default" data-toggle="modal" , data-target="#cancelButton">Cancel</button>
+            <button type="button" class="btn btn-default" data-toggle="modal" data-target="#cancelButton">Cancel</button>
         </div>
     </div>
 }
