--- a/GoGreenV3/Views/Manage/ChangePassword.cshtml
+++ b/GoGreenV3/Views/Manage/ChangePassword.cshtml
@@ -32,7 +32,7 @@
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" value="Change password" class="btn btn-default" />
-            <button type="button" class="btn btn-default" data-toggle="modal" , data-target="#cancelButton">Cancel</button>
+            <button type="button" class="btn btn-default" data-toggle="modal" data-target="#cancelButton">Cancel</button>
         </div>
     </div>
 }
