--- a/GoGreenV3/Views/Agency/Delete.cshtml
+++ b/GoGreenV3/Views/Agency/Delete.cshtml
@@ -5,11 +5,10 @@
 }
 
 <h2>Delete</h2>
-
+<h4>@Model.Name <small>@Model.Address</small></h4>
+<hr />
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Agency</h4>
-    <hr />
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Type)
@@ -89,8 +88,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Delete" class="btn btn-default" />
+            @Html.ActionLink("Cancel", "Index", "Agency", null, new { @class = "btn btn-default" })
         </div>
     }
 </div>
